# SDP200-AI-learning-hub

./: .gitignore  README.md
apps/api/: .env.example  README.md  package.json  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 11bb942d01cf_your_migration_message.py  3bcf36f4d0f5_add_deleted_at_to_announcements.py  9792f03a6591_add_announcements_table.py
apps/api/app/: announcements.py  auth.py  chat_service.py  classrooms.py  config.py  db.py  document_processing.py  files.py  guards.py  main.py  models.py  quiz_service.py  schemas.py  storage.py  summary_service.py  users.py
apps/web/: components.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/app/dashboard/classrooms/[id]/: page.tsx
apps/web/src/app/dashboard/settings/: page.tsx
apps/web/src/components/auth/: auth-gate.tsx
apps/web/src/components/dashboard/: classrooms-context.tsx  dashboard-actions.tsx
apps/web/src/components/shadcn/: app-sidebar.tsx  nav-main.tsx  nav-projects.tsx  nav-secondary.tsx  nav-user.tsx
apps/web/src/components/shadcn/ui/: button.tsx  dialog.tsx  sheet.tsx  sidebar.tsx
apps/web/src/lib/: avatar.ts
apps/web/src/lib/api/: client.ts  config.ts
apps/web/src/lib/auth/: auth-provider.tsx
