[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "fastapi-users>=15.0.5",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "boto3>=1.40.0",
    "pypdf>=6.10.2",
]
